shesmu-server/src/test/resources/bad/bad-lookup-type.shesmu
Define standard_fastq(string s)
  Where path == foo(s);
